<resources>
    <string name="app_name">SSOK</string>
    <string name="janghak">장학</string>
    <string name="bongsa">사회봉사</string>
    <string name="deungrok">등록</string>
    <string name="message_info_category_default">기타</string>
    <string name="action_synchronization">동기화</string>
    <string name="read_sms_request_title">문자내역 읽기 권한을 허용해주십시오.</string>
    <string name="read_sms_request_detail">SSOK은 문자내역을 읽어 데이터베이스에 저장한 뒤, 그 데이터를 바탕으로 문자를 분류하는 서비스를 제공합니다.</string>
    <string name="denied_read_sms_title">문자내역 읽기 권한을 부여받지 못했습니다.</string>
    <string name="denied_read_sms_detail">해당 권한 없이 SSOK의 문자 분류 서비스를 사용하실 수 없습니다.</string>
    <string name="move_setting">SSOK 설정으로 이동해 권한 부여하기</string>
    <string name="start_synchronization">문자 메세지 동기화를 시작합니다.</string>
    <string name="end_synchronization">문자 메세지 동기화를 완료했습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_main">back to the main</string>
    <string name="division_character"><![CDATA[>]]></string>
    <string name="web">웹</string>
    <string name="web_content_id">글번호</string>
    <string name="web_content_date">게시일</string>
    <string name="web_content_url">URL</string>
    <string name="scrap">스크랩</string>
    <string name="related">이 글과 관련된 글</string>
    <string name="user_info_previous"><![CDATA[< 이전]]></string>
    <string name="user_info_first_page">첫 번째 페이지입니다.</string>
    <string name="user_info_second_page">두 번째 페이지입니다.</string>
    <string name="user_info_third_page">세 번째 페이지입니다.</string>
    <string name="user_info_forth_page">네 번째 페이지입니다.</string>
    <string name="user_info_next_page"><![CDATA[다음 >]]></string>
    <string name="user_info_done">완료</string>
    <string name="user_info1_title">기본정보 설정 (1/2)</string>
    <string name="user_info1_student_year">학번을 선택해주세요.</string>
    <string name="user_info1_student_grade">학년을 선택해주세요.</string>
    <string name="user_info1_major">하나 이상의 전공을 추가해주세요.</string>
    <string name="user_info2_title">기본정보 설정 (2/2)</string>
    <string name="user_info2_scholarship">수혜받는 장학금의 종류를 선택해주세요.</string>
    <string name="info_scholarship1">교내 장학금</string>
    <string name="info_scholarship2">교외 장학금</string>
    <string name="info_scholarship3">국가 장학금</string>
    <string name="user_info2_status">재학/휴학 여부를 선택해주세요</string>
    <string name="user_status_in">재학</string>
    <string name="user_status_out">휴학</string>
    <string name="category_interest_title">카테고리 관심 여부 설정</string>
    <string name="category_interest_description">카테고리의 관심/일반/무관심 여부를 지정해주세요. 단, 관심 카테고리는 3개 이상 선택해주셔야 합니다.</string>
    <string name="category_scholarship">장학</string>
    <string name="category_academic">학사</string>
    <string name="category_event">행사</string>
    <string name="category_recruit">모집</string>
    <string name="category_system">시스템</string>
    <string name="category_global">국제</string>
    <string name="category_career">취업</string>
    <string name="category_student">학생</string>
    <string name="user_info4_title">세부정보 입력 (2/2)</string>
    <string name="user_info4_category">관심없는 카테고리를 선택해주세요\n(0개 이상)</string>
    <string name="user_info3_uninterest_already_checked">해당 카테고리는 관심없는 카테고리로 설정되어 있습니다. 관심없음 체크를 먼저 해제해주세요</string>
    <string name="user_info4_interest_already_checked">해당 카테고리는 관심있는 카테고리로 설정되어 있습니다. 관심있음 체크를 먼저 해제해주세요</string>
    <string name="major_select_toolbar_title">학부/학과 선택</string>
    <string name="major_back_description">Go back to user information setting form</string>
    <string name="college_liberalarts">문과대학</string>
    <string name="college_science">이과대학</string>
    <string name="college_engineering">공과대학</string>
    <string name="college_human_ecology">생활과학대학</string>
    <string name="college_social_sciences">사회대학</string>
    <string name="college_law">법과대학</string>
    <string name="college_economics_business_administration">경상대학</string>
    <string name="college_music">음악대학</string>
    <string name="college_pharmacy">약학대학</string>
    <string name="college_fine_art">미술대학</string>
    <string name="school_global_service">글로벌서비스학부</string>
    <string name="school_english">영어영문학부</string>
    <string name="school_communication_media">미디어학부</string>
    <string name="select_interest_major">Select interest major</string>
    <string name="major_select_confirm">확인</string>
    <string name="major_alert_title">알림</string>
    <string name="major_alert_message">변경사항을 저장하지 않고 취소하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="save_toast">변경사항을 모두 저장하였습니다.</string>
    <string name="info_student_year">학번</string>
    <string name="info_student_grade">학년</string>
    <string name="info_major">전공</string>
    <string name="info_scholarship">장학금 수혜여부</string>
    <string name="info_status">재/휴학 여부</string>
    <string name="interest_category_min">관심 카테고리는 3개 이상이어야 합니다.</string>
    <string name="refresh_current_page">refresh current page</string>
    <string name="internet_connect_error">데이터를 불러오지 못했습니다.\n인터넷 연결을 확인해주세요.</string>
    <string name="no_data_in_server">서버에 데이터가 존재하지 않습니다.</string>
    <string name="finish_data_load">데이터 로드를 완료했습니다.</string>
    <string name="sample_action">Sample action</string>
    <string name="search_title">Search Contacts</string>
    <string name="intro_message">예시</string>
    <string name="message_permission_denied">문자 메세지 읽기 권한을 받지 못했습니다.</string>
    <string name="title_example">제목 예시</string>
    <string name="category_example">분류 예시</string>
    <string name="loading">Loading...</string>
    <string name="view_pager_main_search">search message and web content</string>
    <string name="error_or_no_data">error or no data</string>
    <string name="press_back_again_for_exit">앱을 종료하시려면 한 번 더 뒤로가기를 눌러주세요.</string>
    <string name="message">문자</string>
    <string name="my_page">마이 페이지</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="recommend">맞춤 추천</string>
    <string name="common">학교소식</string>
    <string name="depart">전공</string>
    <string name="my_topic">관심사</string>
    <string name="my_info">개인정보</string>
    <string name="my_clip">보관함</string>
    <string name="rank_item">rank item</string>
    <string name="topic_card_view_background_image">topic card view background image</string>
    <string name="notice">공지</string>
    <string name="career">취업</string>
    <string name="collapsing_toolbar_image_view">collapsing toolbar image view</string>
    <string name="department_major_min_count">학부/학과는 1개 이상 선택해야 합니다.</string>
    <string name="refresh_already_started">이미 동기화가 진행중입니다.</string>
    <string name="calcel_request">요청이 취소되었습니다.</string>
    <string name="web_content_attach_file">첨부파일</string>
    <string name="attach_expandable_image">expandable image for showing web content\'s attach file</string>
    <string name="server_invalid_error">서버에 문제가 발생했습니다.\n잠시 후에 재시도 해주시기바랍니다.</string>
    <string name="category_status_interest">관심</string>
    <string name="category_status_normal">일반</string>
    <string name="category_status_uninterest">무관심</string>
    <string name="expand">펼치기</string>
    <string name="shrink">접기</string>
    <string name="app_information">앱 정보</string>
    <string name="version">버전</string>
    <string name="license">라이센스</string>
    <string name="feedback">피드백</string>
    <string name="show_licenses">Show licenses</string>
    <string name="app_developer">어플리케이션 개발자</string>
    <string name="team_name">팀 명</string>
    <string name="id3">ID3</string>
    <string name="department">소속</string>
    <string name="sookmyung_software">숙명여자대학교 소프트웨어학부</string>
    <string name="professor">지도교수</string>
    <string name="kiyong_lee">이기용</string>
    <string name="developers">개발자</string>
    <string name="our_name">김혜민 오지은 정혜린</string>
</resources>
