<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    tools:context="com.example.jiun.ssok.user.info.UserInfo3Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/category_interest_title"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/category_interest_description"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        tools:context="com.example.jiun.ssok.user.mypage.CategoryInterestFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_scholarship_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_scholarship"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_academic_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_academic"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_event_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_event"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_recruit_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_recruit"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_system_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_system"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_global_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_global"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_career_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_career"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />

            <com.example.jiun.ssok.user.mypage.CustomCategoryInterestItem
                android:id="@+id/category_student_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:name_txt="@string/category_student"
                app:status_background="@color/colorPrimary"
                app:status_txt="@string/category_status_normal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
