<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.jiun.sookpam.MyTopicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/my_topic_scholarship_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_scholarship"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/my_topic_academic_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_academic"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/my_topic_event_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_event"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/my_topic_recruit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_recruit"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/my_topic_system_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_system"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/my_topic_global_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_global"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/my_topic_career_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_career"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/my_topic_student_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_white_blue"
            android:minHeight="60dp"
            android:text="@string/category_student"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
