<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.jiun.sookpam.setting.InfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/web_content_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:minHeight="56dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp">

            <ImageButton
                android:id="@+id/info_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/back_to_main"
                android:focusable="true"
                android:src="@drawable/ic_back_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_information"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/version"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_version_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:textSize="18sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/colorWhiteGray" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_licenses"
            android:src="@drawable/intent_start" />

        <TextView
            android:id="@+id/info_license_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/license"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/colorWhiteGray" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_licenses"
            android:src="@drawable/intent_start" />

        <TextView
            android:id="@+id/info_feedback_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/feedback"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/colorWhiteGray" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_licenses"
            android:src="@drawable/intent_start" />

        <TextView
            android:id="@+id/info_developer_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/app_developer"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </FrameLayout>
</LinearLayout>
